--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "streetsidesoftware.code-spell-checker",
         "james-yu.latex-workshop",
         "iamhyc.overleaf-workshop",
+        "streetsidesoftware.code-spell-checker",
         "streetsidesoftware.code-spell-checker-spanish"
     ]
 }
