--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
     "tasks": [
         {
             "label": "Clean up auxiliary files",
-            "command": "rm -f *.acn *.acr *.alg *.aux *.bbl *.bcf *.blg *.fdb_latexmk *.fls *.glg *.glo *.gls *.ist *.lof *.log *.lot *.out *.run.xml *.synctex\\(busy\\) *.synctex.gz *.toc *.xdv",
+            "command": "rm -f *.acn *.acr *.alg *.aux *.bbl *.blg *.glg *.glo *.gls *.ist *.lof *.log *.lot *.out *.pdf *.synctex\\(busy\\) *.synctex.gz *.toc",
             "type": "shell",
             "problemMatcher": []
         }
