--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,10 @@
             "label": "Clean up auxiliary files",
             "command": "rm -f *.acn *.acr *.alg *.aux *.bbl *.blg *.glg *.glo *.gls *.ist *.lof *.log *.lot *.out *.pdf *.synctex\\(busy\\) *.synctex.gz *.toc",
             "type": "shell",
-            "problemMatcher": []
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "silent"
+            }
         }
     ]
 }
