--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
     "tasks": [
         {
             "label": "Clean up auxiliary files",
-            "command": "rm -f *.acn *.acr *.alg *.aux *.bbl *.blg *.glg *.glo *.gls *.ist *.lof *.log *.lot *.out *.pdf *.synctex\\(busy\\) *.synctex.gz *.toc svg-inkscape/",
+            "command": "rm -fr *.acn *.acr *.alg *.aux *.bbl *.blg *.fdb_latexmk *fls *.glg *.glo *.gls *.ist *.lof *.log *.lot *.out *.pdf *.synctex\\(busy\\) *.synctex.gz *.toc svg-inkscape/",
             "type": "shell",
             "problemMatcher": [],
             "presentation": {
